--- a/rdf-network-analysis.ipynb
+++ b/rdf-network-analysis.ipynb
@@ -19,7 +19,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 0. Preliminaries"
+    "## 0. Preparation"
    ]
   },
   {
@@ -29,8 +29,10 @@
    "outputs": [],
    "source": [
     "# Install required packages in the current Jupyter kernel\n",
-    "# Uncomment the following two lines if you need to install these libraries\n",
+    "# Uncomment the following lines if you need to install these libraries\n",
+    "# If you run into permission issues, try with the --user option\n",
     "# import sys\n",
+    "# !pip install -q rdflib networkx matplotlib\n",
     "# !{sys.executable} -m pip install rdflib networkx matplotlib --user\n",
     "\n",
     "# Imports\n",
@@ -47,12 +49,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 1. Loading an RDF graph\n",
+    "## 1. Loading RDF\n",
     "\n",
     "The first thing to do is to load the RDF graph we want to perform the network analysis on. By executing the next cell, we'll be asked to fill in the path to an RDF graph. This can be any path, local or online, that we can look up.\n",
     "\n",
     "Any of the Turtle (`ttl.`) files that we include with this notebook will do; for example, `bsbm-sample.ttl`.\n",
-    "But any Web location that leads to an RDF file (for example, https://raw.githubusercontent.com/albertmeronyo/lodapi/master/ghostbusters.ttl) will work too."
+    "But any Web location that leads to an RDF file (for example, the GitHub copy of that same file at https://raw.githubusercontent.com/albertmeronyo/rdf-network-analysis/master/bsbm-sample.ttl; or any other RDF file on the Web like https://raw.githubusercontent.com/albertmeronyo/lodapi/master/ghostbusters.ttl) will work too."
    ]
   },
   {
@@ -156,7 +158,7 @@
     "- Clustering metrics (connected components, clustering)\n",
     "- Overall network plot\n",
     "\n",
-    "The report can be easily selected and copy-pasted for further use in otehr "
+    "The report can be easily selected and copy-pasted for further use in other tools."
    ]
   },
   {
